Basic documentation in the README

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,5 @@
 ```{r, setup, echo = FALSE, message = FALSE}
 knitr::opts_chunk$set(
-  comment = "#>",
   tidy = FALSE,
   error = FALSE,
   fig.width = 8,
@@ -12,21 +11,59 @@ knitr::opts_chunk$set(
 [![Linux Build Status](https://travis-ci.org/richfitz/seagull.svg?branch=master)](https://travis-ci.org/richfitz/seagull)
 [![Windows Build status](https://ci.appveyor.com/api/projects/status/github/richfitz/seagull?svg=true)](https://ci.appveyor.com/project/richfitz/seagull)
 
-File locking for R.
+Portable file locking for R.  Based on the "inter process" locks in the Python [fasteners](https://pypi.python.org/pypi/fasteners) package.
 
-## Installation
+The package provides a function `with_flock` which evaluates an expression only if a file lock can be obtained.  By default it will block and periodically retry to  open the file.
 
-```{r eval = FALSE}
-devtools::install_github("richfitz/seagull")
-```
-
-## Usage
+For example, suppose you want to place an advisory lock in a directory `path`.  We can create a lockfile in that directory and then we can do whatever we want in the directory -- other processes obeying this convention will wait:
 
 ```{r}
-library(seagull)
+path <- tempfile()
+dir.create(path)
+lockfile <- file.path(path, "lock")
+realfile <- file.path(path, "db")
+seagull::with_flock(lockfile, {
+  prev <- if (file.exists(realfile)) readLines(realfile) else character(0)
+  writeLines(c(prev, paste(Sys.getpid(), "wuz here")), realfile)
+})
+```
+
+```{r}
+readLines(realfile)
+```
+
+The code above will wait until the db file is ready, read it, add a new line to it, then release the lock.  If multiple processes were trying to do this at once they would access the file in an unspecified order but a race condition between read and write is eliminated.
+
+For example:
+
+```{r}
+cl <- parallel::makeCluster(4, "PSOCK")
+ign <- parallel::clusterEvalQ(cl, library(seagull))
+pids <- unlist(parallel::clusterCall(cl, Sys.getpid))
+pids
+```
+
+Run the code from above (slightly awkward due to controlling the cluster):
+
+```{r}
+f <- function(lockfile, realfile) {
+  seagull::with_flock(lockfile, {
+    prev <- if (file.exists(realfile)) readLines(realfile) else character(0)
+    writeLines(c(prev, paste(Sys.getpid(), "wuz here")), realfile)
+  })
+}
+ign <- parallel::clusterCall(cl, f, lockfile, realfile)
+```
+
+The file now contains four entries, one from each node:
+
+```{r}
+readLines(realfile)
 ```
 
 ## Design condsiderations
+
+**Portability**.  On unix systems this uses `fcntl` which should work on Linux and BSD based systems, modern NFS and SMB.  On Windows it uses the Win32 API (`_locking` from `sys/locking.h`).
 
 **This package does not use R's connection objects**.  A sane native implementation of file locking would use the result of `file(...)`, but because of the way R's connection objects are implemented this is not possible (the actual file descriptor object is stored in the private data of the connection object and the format of that is non-API).
 
@@ -41,6 +78,12 @@ Unfortunately with the [implementation of unix file locking](http://0pointer.de/
 The lock will be lost at step 4 above but that should not matter as `seagull` never writes to the files it holds.  Note that this situation applies to things like `writeLines`, `write.csv`, etc; those functions encompass steps 2-4 in the above.
 
 Future versions may implement the full connection interface to allow passing the locked file around as an R connection.
+
+## Installation
+
+```{r eval = FALSE}
+devtools::install_github("richfitz/seagull")
+```
 
 ## License
 
